tring to get firebase and angularfire to load

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,3 +1,5 @@
 <div class="container">
-<h1>Lets see if I can get something to work</h1>
+<ul>
+  <li ng-repeat='w in main.weeks'>{{w}}</li>
+</ul>
 </div>
