have the date home and visitors showing up

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,5 +1,5 @@
 <div class="container">
-<ul>
-  <li ng-repeat='w in main.weeks'>{{w}}</li>
-</ul>
+  <ul>
+    <li ng-repeat='w in main.weeks'>{{w.Date}} | {{w.Home}} || {{w.Visitors}}</li>
+  </ul>
 </div>
