looks a little better with the date

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,7 +1,7 @@
 <div class="container">
   <ul>
-    <h3>First</h3>
-    <li ng-repeat='(k, v) in main.weeks'>
+    <h2>First</h2>
+    <li ng-repeat='(k, v) in main.weeks'><h3>{{v.Date}}</h3>
     <p ng-repeat='value in v.Home'>
       {{value}}
     </p>
