this way is not going to work, need to think of a little better way to have the teams be placed in fb

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,12 +1,10 @@
 <div class="container">
   <ul>
     <li ng-repeat='w in main.weeks'> <h3>{{w.Date}}</h3>
-    <p ng-repeat='v in w.Games[0]' class='home'>
+    <p ng-repeat='v in w.Games' class='home'>
       {{v}}
     </p>
-    <p ng-repeat='v in w.Games[1]' class='visitor'>
-      {{v}}
-    </p></li>
-  </ul>
 
+    </li>
+  </ul>
 </div>
