not working the way i thought it would more rethinking

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,9 +1,7 @@
 <div class="container">
   <ul>
-    <li ng-repeat='w in main.weeks'>{{w.Date}} {{w.Games.Home}}
-      <p ng-repeat='v in w.Games.Home'>
-        
-      </p>
+    <li ng-repeat='w in main.weeks'>{{w}}
+
 
     <!-- <p ng-repeat='v in w.Game' class='home'>
       {{v}}
