--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,15 +1,18 @@
 <div class="container">
-  <ul>
+  <!-- <ul>
     <li ng-repeat='w in main.weeks'>{{w}}
-
-
-    <!-- <p ng-repeat='v in w.Game' class='home'>
+    <p ng-repeat='v in w.Game' class='home'>
       {{v}}
 
-    </p> -->
-    <!-- <p ng-repeat='v in w.Games[0]'>
+    </p>
+    <p ng-repeat='v in w.Games[0]'>
       {{v}}
-    </p> -->
+    </p>
     </li>
-  </ul>
+  </ul> -->
+<ul>
+  <li ng-repeat='w in main.weeks'>
+  {{w}}
+  </li>
+</ul>
 </div>
