starting over thinking about a better way to fit all of this together

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -4,10 +4,12 @@
     <acme-navbar creationDate="main.creationDate" />
   </div>
   <div>
-    <h3>Lets start from the begining</h3>
-    <ul>
+    <h3>Players</h3>
+    <ol>
       <li ng-repeat='x in players'>{{x}}</li>
-    </ul>
+    </ol>
   </div>
+
+
 
 </div>
