redirect works, working on the home page with rules

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -9,4 +9,7 @@
     <button ng-click='main.logout()' class='btn-danger'>Log the fuck up</button>
     <button ng-click='main.standings' ui-sref='profile({id:main.authDate.uid})'>Make Your Pics</button>
   </div>
+  <div class='rules'>
+    <h3>How to play</h3>
+  </div>
 </div>
