--- a/src/app/main/main.css
+++ b/src/app/main/main.css
@@ -5,10 +5,11 @@ body{
   -o-background-size:cover;
   background-size:cover;
 }
-.container{
+.rules{
   background-color:#2B2F32;
   opacity:.9;
+  color:white;
 }
 h1{
-  color:white;
+  color:gray;
 }
