--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,15 +1,25 @@
 <div class="container">
   <h1>Fantasy Golf Challenge</h1>
 
-  <div ng-hide='main.authData'>
-    <button ng-click='main.login()' class='btn-primary'>Log in with facebook</button>
-  </div>
-
-  <div ng-show='main.authData'>
-    <button ng-click='main.logout()' class='btn-danger'>Log the fuck up</button>
-    <button ng-click='main.standings' ui-sref='profile({id:main.authDate.uid})'>Make Your Pics</button>
-  </div>
   <div class='rules'>
     <h3>How to play</h3>
+    <ol>
+      <li>Each team selects four golfers for each tournament</li>
+      <li>Your team score is all golfers points added together</li>
+      <li>Golfers get points based on a modified stableford system</li>
+      <p>4 Points for EAGLE or Better
+      2 Points for BIRDIE <br>
+      0 Points for PAR <br>
+      -1 Points for BOGIE <br>
+      -2 Points for DOUBLE or Worse</P>
+    </ol>
+    <div ng-hide='main.authData'>
+      <button ng-click='main.login()' class='btn-primary'>Sign in with Facebook</button>
+    </div>
+    <div ng-show='main.authData'>
+      <button ng-click='main.profile' ui-sref='profile({id:main.authData.uid})' class='btn-danger'>Pic your team</button>
+      <button ng-click='main.logout()'>Logme out</button>
+    </div>
   </div>
+
 </div>
