think the splash screen is done

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -17,8 +17,8 @@
       <button ng-click='main.login()' class='btn-primary'>Sign in with Facebook</button>
     </div>
     <div ng-show='main.authData'>
-      <button ng-click='main.profile' ui-sref='profile({id:main.authData.uid})' class='btn-danger'>Pic your team</button>
-      <button ng-click='main.logout()'>Logme out</button>
+      <button ng-click='main.profile' ui-sref='profile({id:main.authData.uid})' class='btn-primary'>Make your team</button>
+      <button ng-click='main.logout()' class='btn-danger'>Logme out</button>
     </div>
   </div>
 
