--- a/src/app/profile/profile.html
+++ b/src/app/profile/profile.html
@@ -1,4 +1,6 @@
 <div class="container">
   <h1>Place holder for some other shit</h1>
-
+  <ul>
+    <li ng-repeat='x in profile.players'>{{x}} <button ng-click='profile.add(x)'>Add</button></li>
+  </ul>
 </div>
