name title shows up

--- a/src/app/profile/profile.html
+++ b/src/app/profile/profile.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Place holder for some other shit</h1>
+  <h1>{{profile.tName}}</h1>
   <ul>
     <li ng-repeat='x in profile.players'>{{x}} <button ng-click='profile.add(x)'>Add</button></li>
   </ul>
