Added some style

--- a/src/app/profile/profile.html
+++ b/src/app/profile/profile.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h1>{{profile.tName}}</h1>
   <ul>
-    <li ng-repeat='x in profile.players'>{{x}} <button ng-click='profile.add(x)'>Add</button></li>
+    <li ng-repeat='x in profile.players'>{{x}} <button ng-click='profile.add(x)' class='btn pull-right'>Add</button></li>
   </ul>
 </div>
