got ids, working on the players

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -18,6 +18,7 @@
     </div>
     <div ng-show='main.authData'>
       <button ng-click='main.profile' ui-sref='profile({id:main.authData.uid})' class='btn-primary'>Make your team</button>
+      <button ng-click='main.standings' ui-sref='standings'>Standings page</button>
       <button ng-click='main.logout()' class='btn-danger'>Logme out</button>
     </div>
   </div>
