need the array to be an object

--- a/src/app/standings/standings.html
+++ b/src/app/standings/standings.html
@@ -1,4 +1,4 @@
 <div class="container">
   <h1>Standings</h1>
-  <h3 ng-repeat='f in standings.final'>{{f.User}} {{f.Team}}</h3>
+  <h3 class='standings'ng-repeat='f in standings.final'>{{f.User}} {{f.Team}}</h3>
 </div>
