lets see if i can make this work now

--- a/src/app/standings/standings.html
+++ b/src/app/standings/standings.html
@@ -1,7 +1,6 @@
 <div class="container">
   <h1>Standings</h1>
-<h3 ng-repeat='m in muffin.users'>{{m}}
-<p ng-repeat='m in muffin.team'>{{m}}</p></h3>
+<h3 ng-repeat='d in deep'>{{d.users}}</h3>
 
 
 
