stuck working on out put

--- a/src/app/standings/standings.html
+++ b/src/app/standings/standings.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h1>Standings</h1>
-<h3 ng-repeat='d in deep'>{{d.users}}</h3>
+<h3 ng-repeat='d in deep'>{{d.users}}{{d.Team}}</h3>
 
 
 
